--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "gatsby-plugin-eslint": "^2.0.8",
+    "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.3.0",
     "prettier": "^1.19.1",
@@ -66,6 +67,7 @@
     "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx --ext js --ext jsx",
     "lint:fix": "yarn lint --fix",
     "type-check": "tsc --pretty --noEmit",
+    "prepush": "yarn lint && yarn test:cov",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:watch": "jest --watch"
