--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Vladimir Galicia <hola@the-vladman.me>",
   "dependencies": {
     "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.10",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
@@ -20,7 +21,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "typeface-roboto": "^0.0.75"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
@@ -54,7 +56,6 @@
     "jest",
     "typescript",
     "@testing-library"
-
   ],
   "license": "MIT",
   "scripts": {
