--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.1.0",
     "babel-preset-gatsby": "^0.3.1",
+    "babel-preset-react-app": "^9.1.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
